Edit script.js, index.html, styles.css

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   min-height: 100vh;
   font-family: monospace;
+  background-color: aliceblue;
 }
 
 .header {
@@ -26,15 +27,9 @@ body {
 
 .area {
   display: grid;
-  grid-template-columns: 100px 100px 100px 100px;
-  width: 400px;
-  height: 400px;
+  width: 500px;
+  height: 500px;
   border: 1px solid black;
-}
-
-div {
-  width: 100px;
-  height: 100px;
 }
 
 .options {
@@ -80,7 +75,39 @@ button:hover {
 }
 
 .vol-selection {
-  display: grid;
+  display: flex;
   align-items: center;
+  flex-direction: column;
+  justify-content: center;
   width: 200px;
+}
+
+#accept {
+  padding: 10px 14px;
+}
+
+.show-vol-select {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 30px;
+  font-weight: bold;
+}
+
+.box {
+  background-color: #fff;
+}
+
+.box:hover {
+  animation: boxAnimation 500ms infinite alternate-reverse;
+  box-shadow: 0px 0px 1px 1px gray;
+}
+
+@keyframes boxAnimation {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.1);
+  }
 }
