--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,12 @@ body {
   margin: 0;
   min-height: 100vh;
   font-family: monospace;
-  background-color: aliceblue;
+  background: rgb(34, 193, 195);
+  background: linear-gradient(
+    0deg,
+    rgba(34, 193, 195, 1) 0%,
+    rgba(0, 255, 239, 0.3029586834733894) 100%
+  );
 }
 
 .header {
@@ -11,10 +16,17 @@ body {
   justify-content: center;
   width: 100%;
   height: 50px;
-  background-color: rgb(106, 219, 223);
-  color: white;
+  background-color: rgb(68, 222, 228);
+  color: rgb(246, 255, 197);
+  text-shadow: 0px 0px 5px rgb(52, 53, 133);
   font-weight: bold;
   font-size: 32px;
+  box-shadow: 0px 1px 10px rgba(34, 193, 195, 1);
+  transition: 200ms;
+}
+
+.header:hover {
+  box-shadow: 0px 2px 15px rgba(34, 193, 195, 1);
 }
 
 .container {
@@ -30,6 +42,21 @@ body {
   width: 500px;
   height: 500px;
   border: 1px solid black;
+  box-shadow: 0px 0px 5px rgb(29, 117, 158);
+  transition: 200ms;
+}
+
+.area:hover {
+  box-shadow: 0px 0px 10px rgb(29, 117, 158);
+}
+
+@keyframes onappear {
+  0% {
+    opacity: 0.001;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .options {
@@ -41,6 +68,33 @@ body {
   width: 1000px;
   height: 120px;
   border: 1px solid black;
+  box-shadow: 0px 0px 5px 0px blue;
+  animation: onappear 1600ms;
+  transition: 400ms;
+  background: rgb(159, 251, 251);
+  background: linear-gradient(
+    0deg,
+    rgba(159, 251, 251, 0.8127626050420168) 25%,
+    rgba(159, 251, 251, 1) 50%,
+    rgba(159, 251, 251, 1) 50%,
+    rgba(159, 251, 251, 1) 75%,
+    rgba(159, 251, 251, 1) 100%,
+    rgba(159, 251, 251, 1) 100%
+  );
+}
+
+.options:hover {
+  box-shadow: 0px 0px 15px 1px blue;
+  background: rgb(148, 255, 255);
+  background: linear-gradient(
+    0deg,
+    rgba(148, 255, 255, 1) 25%,
+    rgba(148, 255, 255, 1) 50%,
+    rgba(148, 255, 255, 1) 50%,
+    rgba(148, 255, 255, 1) 75%,
+    rgba(148, 255, 255, 1) 100%,
+    rgba(148, 255, 255, 1) 100%
+  );
 }
 
 button {
@@ -51,25 +105,32 @@ button {
   color: white;
   font-weight: bold;
   transition: 200ms;
+  margin-left: 50px;
+  margin-right: 50px;
+  box-shadow: 0px 0px 5px 1px blue;
 }
 
 button:hover {
   transform: scale(1.1);
+  box-shadow: 0px 0px 10px 1px blue;
   background-color: white;
-  border: 1px solid black;
   color: rgb(120, 181, 235);
 }
 
 .color-selection {
   display: flex;
   align-items: center;
+  flex-direction: column;
   width: 200px;
   gap: 10px;
+  color: rgb(80, 193, 221);
+  text-shadow: 1px 1px blue;
 }
 
 #color-select {
   border: none;
-  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px 1px blue;
   transform: scale(1.3);
   cursor: pointer;
 }
@@ -80,6 +141,8 @@ button:hover {
   flex-direction: column;
   justify-content: center;
   width: 200px;
+  color: rgb(80, 193, 221);
+  text-shadow: 1px 1px blue;
 }
 
 #accept {
@@ -100,7 +163,7 @@ button:hover {
 
 .box:hover {
   animation: boxAnimation 500ms infinite alternate-reverse;
-  box-shadow: 0px 0px 1px 1px gray;
+  box-shadow: 0px 0px 1px 1px #fff;
 }
 
 @keyframes boxAnimation {
@@ -110,4 +173,24 @@ button:hover {
   100% {
     transform: scale(1.1);
   }
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  bottom: 0;
+  position: fixed;
+  width: 100%;
+  padding: 10px;
+  background: rgb(62, 231, 175);
+  color: white;
+  text-shadow: 1px 1px 5px blue;
+  font-weight: bold;
+  box-shadow: 0px -1px 5px 1px rgba(0, 255, 239, 0.3029586834733894);
+  transition: 200ms;
+}
+
+.footer:hover {
+  box-shadow: 0px -2px 20px 1px rgba(0, 255, 239, 0.3029586834733894);
 }
